[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scene/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sound Effect/UI SFX/click1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scene/TheGame.gd" type="Script" id=5]

[node name="TheGame" type="Node2D"]
script = ExtResource( 5 )

[node name="UI" parent="." instance=ExtResource( 1 )]
layer = 2

[node name="Timers" type="Node" parent="."]

[node name="PreparationTimer" type="Timer" parent="Timers"]

[node name="EnemySpawnTimer" type="Timer" parent="Timers"]

[node name="GameOverTimer" type="Timer" parent="Timers"]
pause_mode = 2

[node name="StartButtonSFX" type="AudioStreamPlayer" parent="." groups=["sfx"]]
stream = ExtResource( 2 )

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true

[connection signal="mouse_entered" from="UI/HUD/BuildBar/Complementary" to="UI" method="_buildbar_on_mouse"]

[editable path="UI"]
[editable path="UI/HUD/BuildBar/Complementary"]
[editable path="UI/HUD/BuildBar/Macrophage"]
[editable path="UI/HUD/BuildBar/Neutrophils"]
[editable path="UI/HUD/BuildBar/TCell"]
[editable path="UI/HUD/BuildBar/BCell"]
